tests/build_fail/bseq_fail_ident_expr_no_separator.rs
use bit_seq::bseq;

fn main() {
    let var = 0;
    bseq!(var 2);
}